--- a/style.css
+++ b/style.css
@@ -196,10 +196,12 @@ footer p {
 }
 
 .sobre-foto img {
-    width: 320px;
+    width: 250px;  /* antes 320px */
     max-width: 100%;
     border-radius: 12px;
     box-shadow: 0px 4px 14px rgba(0,0,0,0.18);
+}
+
 }
 
 .sobre-texto {
